Changed header wording and fixed spacing problems

--- a/css/custom.css
+++ b/css/custom.css
@@ -76,6 +76,7 @@ a {
 
 .moreworkParent {
     text-align: center;
+    height: 0px;
 }
 
 .morework {
